# ibmdotcom-tutorials

./: CONTRIBUTING.md  DEPENDABOT_AUTO_APPROVAL_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot-auto-approve.yml  dependency-review.yml  python-security.yml  secret-scan.yml
dependabot-bob-files/: DEPENDABOT_REVIEW_PROCESS.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_IMPROVEMENT_PLAN.md  TESTING_CHECKLIST.md
tutorials/02-agents-and-orchestration/react-agent-it-support/: pyproject.toml
tutorials/02-agents-and-orchestration/sql-agent-app/: requirements.txt
tutorials/03-multi-agent-systems/a2a_tutorial/beeai-a2a-client/: requirements.txt
tutorials/03-multi-agent-systems/acp_tutorial/: pyproject.toml
tutorials/03-multi-agent-systems/bee-ai-multi-agent-contract-management/: requirements.txt
tutorials/03-multi-agent-systems/chatdev_watsonx_tutorial_/: requirements.txt
tutorials/03-multi-agent-systems/multiagent-collab-cs-call-center-analysis/: pyproject.toml
tutorials/03-multi-agent-systems/my_retail_advisor/: pyproject.toml
tutorials/08-time-series-and-forecasting/planning-analytics-forecasting/: product_sales_forecast.csv
tutorials/13-full-stack-applications/ai-stylist/: requirements.txt
tutorials/13-full-stack-applications/silly_story_time/: package-lock.json  package.json
tutorials/17-data-streaming/confluent-modernization/: confluent_modernization_notebook.ipynb  dashboard_two_stream.py  requirements.txt
(+5 files in other folders)
